# mojo

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  README.md  conanfile.txt
blender/: __init__.py  connector.py  pencil.py
cmake/: FindMaya.cmake
maya/: mojo.mod
maya/scripts/mojo/: connector.py  shelf.py
maya/shaders/: fill.frag  fill.vert  stroke.frag  stroke.geom  stroke.vert
proto/: CMakeLists.txt  mojo.capnp
src/: CMakeLists.txt  connector.cpp  connector.h  dummy.cpp  mojo.cpp  pencil.cpp  pencil.h  protocal.hpp  scene.h  server.cpp  server.h  socket_utils.hpp  swig.i
src/blenderCT/: CMakeLists.txt  blender.i
src/mayaCT/: CMakeLists.txt  maya.i  mayaConnector.cpp  mayaConnector.h
src/mayaRT/: CMakeLists.txt  pencilData.cpp  pencilData.h  pencilDraw.cpp  pencilDraw.h  pencilNode.cpp  pencilNode.h  plugin.cpp
